--- a/_notebooks/2023-10-17-Unit5.ipynb
+++ b/_notebooks/2023-10-17-Unit5.ipynb
@@ -641,7 +641,13 @@
         "\n",
         "2. **parameter** > Sometimes, we can also use the object as a parameter in its own method call to use itself in the method by using objectName.methodName(this).\n",
         "\n",
-        "3. **constructor or method call** > Sometimes, we can also use the object as a parameter in its own method call to use itself in the method by using objectName.methodName(this)."
+        "3. **constructor or method call** > Sometimes, we can also use the object as a parameter in its own method call to use itself in the method by using objectName.methodName(this).\n",
+        "\n",
+        "Using **this()** in a constructor >> Calls the no-arg constructor or the constructor without any parameters of the current class, can also call other constructor that hav parameters by passing correct numb and type of args between parenthesis\n",
+        "\n",
+        "^^ using **this()** can help you reuse code from one constructor in another\n",
+        "\n",
+        "**this** in Java >> is limited to current object = only be used to access instance variables and invoke non-static methods"
       ]
     },
     {
@@ -735,6 +741,15 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### HACKS\n",
+        "\n",
+        "1. what does using **this()** in a constructor mean in your own words"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Bp-8clf74wtK"
       },
@@ -761,7 +776,11 @@
         "\n",
         "Licensing and access also play a role in letting others adapt and build on existing code to create their own programs. There are different types of licenses, like Creative Commons and MIT License, each serving different purposes.\n",
         "\n",
-        "Here is an [article](https://docs.github.com/en/communities/setting-up-your-project-for-healthy-contributions/adding-a-license-to-a-repository) on how to add a license on your Repository"
+        "Here is an [article](https://docs.github.com/en/communities/setting-up-your-project-for-healthy-contributions/adding-a-license-to-a-repository) on how to add a license on your Repository\n",
+        "\n",
+        "### HACKS\n",
+        "\n",
+        "As a team decide what license you want and add it to your repository (add a screenshot of it in your team ticket)"
       ]
     }
   ],
