--- a/_notebooks/2023-10-17-Unit5.ipynb
+++ b/_notebooks/2023-10-17-Unit5.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Tk71r3Yc4wtF"
@@ -19,6 +20,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UpUiUpuU4wtG"
@@ -28,6 +30,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "7DOsHCD_4wtH"
@@ -37,6 +40,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "oq-cSrX04wtH"
@@ -48,6 +52,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "uYNRiCJQ4wtH"
@@ -116,6 +121,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LhztCe-14wtI"
@@ -131,6 +137,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QtVAUjhq4wtJ"
@@ -163,6 +170,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "AVlDJf_I4wtJ"
@@ -216,6 +224,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2phE-moL4wtJ"
@@ -225,6 +234,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "It74utrS4wtJ"
@@ -252,24 +262,359 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XV4NkJ0J4wtK"
       },
       "source": [
-        "<h2> 5.3 </h2>"
+        "<h2> 5.3 Documentation with Comments</h2>\n",
+        "\n",
+        "REMEMBER: comments are ignored by the compiler and anything written in them won't execute \n",
+        "\n",
+        "- they're used for **people** to make code more readable.. allows them to understand what's happening without having to go further into the code \n",
+        "- improves communication between TEAMS \n",
+        "- allows code to be maintained over years\n",
+        "- prevents execution when testing alternative code\n",
+        "\n",
+        "**You are NOT required to write comments of AP Exam FRQs, but it is always a good habit**\n",
+        "\n",
+        "### The types of comments: \n",
+        "\n",
+        "1) Single line: //\n",
+        "2) Multiline: /*  */\n",
+        "3) Java Doc: /** \n",
+        "        *\n",
+        "        *\n",
+        "        */"
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "/* \n",
+        "    Programmer: \n",
+        "    Date: \n",
+        "    Purpose \n",
+        " */\n",
+        "\n",
+        " public class Main {\n",
+        "    public static void main(String[] args) {\n",
+        "        // variables\n",
+        "        double length = 2.5;\n",
+        "        double width = 4;\n",
+        "\n",
+        "        //.. and so on\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "\n",
+        "/** \n",
+        " * javadoc comments:\n",
+        " * jkafhjdajhf\n",
+        " * \n",
+        " * @author\n",
+        " * @version \n",
+        " */"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Javadoc** is a tool that pulls any comments written in this format to make a documentation of the class in the form of a webpage\n",
+        "\n",
+        "Javadoc also has tags (as shown above)\n",
+        "\n",
+        "### Preconditions: conditions that must be met before the execution of a code in order for it to run correctly \n",
+        "\n",
+        "* Will be written in comments for a method for most APCSA questions\n",
+        "* it is assumed that these preconditions are true, we do **not** need to check!\n",
+        "\n",
+        "\n",
+        "### Postconditions: conditions that must be met after the conditions has been executed (outcome, state of variables, ect)\n",
+        "\n",
+        "* Will be written in comments for a method for most APCSA questions\n",
+        "* we **do** have to check to make sure these have been met\n",
+        "* good way to get a summary of what you need to be doing "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "// EXAMPLE FROM AP CLASSROOM:\n",
+        "\n",
+        "public class SecretWord {\n",
+        "    private String word;\n",
+        "\n",
+        "    public SecretWord(String w) {\n",
+        "        word = w;\n",
+        "    }\n",
+        "\n",
+        "    /** \n",
+        "     * Precondition: parameter num is less than the length of word\n",
+        "     * Postcondition: Returns the string of the characters of word from the index hum to the end of the word followed by the characters of word from index 0 to num, not including index num. The state of word has not changed\n",
+        "     */\n",
+        "\n",
+        "    public String newWord(int num)\n",
+        "    {\n",
+        "        //implementation not shown\n",
+        "    }\n",
+        "}"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "m5rcCeCM4wtK"
       },
       "source": [
-        "<h2> 5.4 </h2>"
+        "<h2> 5.4 Accessor Method </h2>\n",
+        "\n",
+        "OUR GOAL: to define behaviors of an object through non-void methods NOT using parameters written in a class\n",
+        "\n",
+        "REMEMBER: an accessor method allows other objects to access static variables\n",
+        "\n",
+        "### What is the purpose of an accessor method?\n",
+        "\n",
+        "It allows us to safely access variables without other people being able to. Also called get methods or getters. \n",
+        "\n",
+        "They're necessary whenever another class needs to access a variable outside of that class."
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "// Example class \n",
+        "\n",
+        "public class Movie {\n",
+        "    // private instance variables\n",
+        "    private String name;\n",
+        "    private int runtime;\n",
+        "\n",
+        "    // default constructor \n",
+        "    public Movie() {\n",
+        "        name = \"\";\n",
+        "        runtime = 0;\n",
+        "    }\n",
+        "\n",
+        "    // overloaded constructor:\n",
+        "    public Movie(String n, int c) {\n",
+        "        name = n;\n",
+        "        runtime = c;\n",
+        "    }\n",
+        "\n",
+        "    // added ACCESSOR METHOD for each variable\n",
+        "\n",
+        "    public String getName() { // header \n",
+        "        return name; // returning a COPY of the private instance variables\n",
+        "    }\n",
+        "\n",
+        "    public int getRuntime() {\n",
+        "        return runtime\n",
+        "    }\n",
+        "}"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "An accessor method must be:\n",
+        "* ```public``` in order to be accessible \n",
+        "* the return type must match the instance variable type \n",
+        "* usually name of method is getNameOfVariable\n",
+        "* should be NO PARAMETERS\n",
+        "\n",
+        "### POPCORN HACKS: write an accessor method for each of the instance variables:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "public class Course {\n",
+        "    private String name;\n",
+        "    private String gradeLevel;\n",
+        "    private int period;\n",
+        "}"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Let's look at another example:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "public class Sport {\n",
+        "\n",
+        "    private String name;\n",
+        "    private int numAthletes;\n",
+        "\n",
+        "    public Sport(String n, int num) {\n",
+        "        name = n;\n",
+        "        numAthletes = sum;\n",
+        "    }\n",
+        "\n",
+        "    public String getName() {\n",
+        "        return name;\n",
+        "    }\n",
+        "\n",
+        "    public int getNumAthletes () {\n",
+        "        return numAthletes;\n",
+        "    }\n",
+        "}\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Can we print out information about an instance of this object?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "public class Sport {\n",
+        "    private String name;\n",
+        "    private int numAthletes;\n",
+        "\n",
+        "    public Sport(String n, int num) {\n",
+        "        name = n;\n",
+        "        numAthletes = num;\n",
+        "    }\n",
+        "\n",
+        "    public String getName() {\n",
+        "        return name;\n",
+        "    }\n",
+        "\n",
+        "    public int getNumAthletes() {\n",
+        "        return numAthletes;\n",
+        "    }\n",
+        "\n",
+        "    public static void main(String[] args) {\n",
+        "\n",
+        "        Sport volleyball = new Sport(\"volleyball\", 12);\n",
+        "\n",
+        "        System.out.println(volleyball);\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "Sport.main(null);"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "What output did we get?\n",
+        "\n",
+        "The code outputs the ```Object``` class in the form of classname@HashCode in hexadecimal \n",
+        "<br>\n",
+        "<br>\n",
+        "<br>\n",
+        "Let's try using the ```toString``` method:\n",
+        "\n",
+        "* returns a string when System.out.println(object) is called\n",
+        "* no parameters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "public class Sport {\n",
+        "    private String name;\n",
+        "    private int numAthletes;\n",
+        "\n",
+        "    public Sport(String n, int num) {\n",
+        "        name = n;\n",
+        "        numAthletes = num;\n",
+        "    }\n",
+        "\n",
+        "    public String getName() {\n",
+        "        return name;\n",
+        "    }\n",
+        "\n",
+        "    public int getNumAthletes() {\n",
+        "        return numAthletes;\n",
+        "    }\n",
+        "\n",
+        "    public String toString() { // toString method.. HEADER MUST BE WRITTEN IN THIS WAY\n",
+        "        return \"Sport: \" + name +\"\\nNumber of Athletes: \" + numAthletes;\n",
+        "    }\n",
+        "\n",
+        "    public static void main(String[] args) {\n",
+        "\n",
+        "        Sport volleyball = new Sport(\"volleyball\", 12);\n",
+        "\n",
+        "        System.out.println(volleyball);\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "Sport.main(null);"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5vTK32dC4wtK"
@@ -279,6 +624,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "DvVQA8DOTMCx"
@@ -306,6 +652,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QmqfVAPnWYDp"
@@ -386,6 +733,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "MLD3uy1RYuTZ"
@@ -459,6 +807,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Peyyl8Ox4wtK"
@@ -468,6 +817,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tbazNTesVlnd"
@@ -486,6 +836,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "QtZTO0ARWTIP"
@@ -539,6 +890,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "X8TrviaRZABg"
@@ -907,6 +1259,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Xuj9qtZb4wtK"
@@ -919,6 +1272,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -986,6 +1340,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1027,6 +1382,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1036,6 +1392,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Bp-8clf74wtK"
